--- a/public/css/dashboard/dash.css
+++ b/public/css/dashboard/dash.css
@@ -2,41 +2,95 @@
     transform: rotate(90deg);
 }
 
-.card-table{
+.card-title-table{
+    padding: 20px 20px 10px 20px;
     background: #1b1b1b;
     border: transparent;
-    border-radius: 5px;
-    color: #fff;
-}
-
-.tabela-usuarios{
-    margin: 25px 0;
-    color: #fff;
-}
-
-.tabela-usuarios thead tr th,
-.tabela-usuarios tbody tr td{
-    text-align: center !important;
-}
-
-.tabela-usuarios tbody tr td:first-child{
-    border-left: 1px solid #31363F;
-
-}
-
-.tabela-usuarios tbody tr td{
-    padding: 10px;
-    border-right: 1px solid #31363F;
     border-bottom: 1px solid #31363F;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    color: #fff;
 }
 
-.tabela-usuarios thead{
-    background: #31363F;
+.card-table {
+    background-color: #1e1e1e;
+    color: #e0e0e0;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
 }
 
-.tabela-usuarios thead tr th{
-    padding: 10px;
-    border: 1px solid #31363F;
+.tabela-usuarios {
+    width: 100%;
+    margin: 20px 0;
+    border-collapse: separate;
+    border-spacing: 0;
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+.tabela-usuarios thead {
+    background-color: #333;
+}
+
+.tabela-usuarios thead th {
+    padding: 10px 15px;
+    text-align: left;
+    font-weight: bold;
+    color: #f0f0f0;
+    border-bottom: 1px solid #444;
+}
+
+.tabela-usuarios thead th:first-child {
+    border-top-left-radius: 5px;
+    text-align: center;
+}
+
+.tabela-usuarios thead th:last-child {
+    border-top-right-radius: 5px;
+}
+
+.tabela-usuarios tbody tr {
+    border-bottom: 1px solid #444;
+}
+
+.tabela-usuarios tbody tr:nth-child(even) {
+    background-color: #2a2a2a;
+}
+
+.tabela-usuarios tbody tr:nth-child(odd) {
+    background-color: #242424;
+}
+
+.tabela-usuarios tbody tr:hover {
+    background-color: #555;
+}
+
+.tabela-usuarios tbody td {
+    padding: 10px 15px;
+    text-align: left;
+}
+
+.tabela-usuarios tbody td a {
+    color: #1e90ff;
+    text-decoration: none;
+}
+
+.tabela-usuarios tbody td a:hover {
+    text-decoration: underline;
+}
+
+.tabela-usuarios tbody tr td:first-child {
+    text-align: center;
+}
+
+.tabela-usuarios tbody tr:last-child td:first-child {
+    border-bottom-left-radius: 5px;
+}
+
+.tabela-usuarios tbody tr:last-child td:last-child {
+    border-bottom-right-radius: 5px;
 }
 
 .pagination .page-link {
